# Sistema_coletor

./: .env_exemplo.txt  .gitignore  README.md
envio-n8n/: n8n-envio.js  package-lock.json  package.json
leitor/: Cargo.toml
leitor/src/: central_coletores.rs  gari_wazuh.rs  gari_zabbix.rs  main.rs
