[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
lazy_static = "1.5"

serde_json = "1.0.149"

dashmap = "6"

chrono = {
    version = "0.4",
    features = ["serde"]
}

reqwest = {
    version = "0.12",
    features = [
        "blocking",
        "json",
        "rustls-tls"
    ]
}